# projet-intpainting

./: CMakeLists.txt  README.md  arthur.cpp  arthur.h  cord.cpp  cord.h  main.cpp  marius.cpp  marius.h  micka.cpp  micka.cpp.autosave  micka.h  pixel_bord.cpp  pixel_bord.h  priorite.cpp  priorite.h  simon.cpp  simon.h
